# filesystem-mcp-server

./: .coverage  .gitignore  LICENSE  README.md  bandit_report.txt  bandit_report_1.txt  config.py  dockerfile  locustfile.py  main.py  pyproject.toml  systemmonitoring.py  test_integration.py  test_systemmonitoring.py
auth/: auth.py  keys_gen.py
resources/: status.py
tests/: test_integration.py  test_systemmonitoring.py
tools/: file_transfer.py  filesystem.py  monitoring.py  server.py  server_management.py  system.py
utilities/: dependencies.py  filereader.py  imagereader.py  logging.py  storage.py
