[project]
name = "filesystem-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
]
