[project]
name = "filesystem-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "fastmcp>=2.14.1",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "locust>=2.42.6",
]
